# secop-risk-alerts-co

./: .env.example  .gitignore  AGENTS.md  CONTEST_SUBMISSION.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
dashboard/: dash_app.py
dashboard/assets/: styles.css
data/sample/: README.md
db/: README.md
docs/: academic_route.md  ai_usage_disclosure.md  arquitectura.md  auditoria_estado_actual.md  caso-real-puerto-gaitan.md  class_submission_checklist.md  claude_design_prompt.md  claude_design_prompt_v2.md  claude_design_slides_brief.md  contest_submission_checklist.md  crisp_ml.md  data_dictionary.md  demo-casebook.md  demo-guide.md  deployment.md  diccionario_datos.md  ethics-note.md  etl.md  evaluacion_alternativas.md  extraction-findings.md  fairness_territorial.md  human_validation_protocol.md  human_validation_results.md  join-audit.md  manual_usuario.md  master_brief.md  metodologia_gantt.md  microservicios.md  model-card.md  modelo_nosql.md  modelo_relacional.md  pitch_tecnico.md  product_route.md  project_report.md  pruebas.md  reproducibility.md  scoring.md  security.md  testing_evidence.md  testing_plan.md  (+5 more)
etl/: __init__.py  apply_schema.py  build_demo_dataset.py  common.py  download_demo_sources.py  load_to_mongo.py  load_to_postgres.py  sync_product_to_academic.py  validate_final.py  validate_product.py  validate_sources.py
mongo/: README.md  collections.md  init_mongo.py
notebooks/: 01_schema_secop.ipynb
presentation/: README.md  slides.md  speaker_notes.md
scripts/: launch_overnight_agents.sh
services/: __init__.py
slides/: INSTRUCCIONES.md  PROMPT.md  README.md  contratia_abierta_deck.md  contratia_abierta_deck_v3.pptx  contratia_abierta_final.pptx  contratia_abierta_speaker_notes.md  outline.md
sql/: 001_schema.sql  002_indexes.sql  003_triggers.sql  005_seed_reference_data.sql  006_transactions_demo.sql  007_security_roles.sql
tests/: test_api.py  test_api_analytics.py  test_api_contracts.py  test_api_risk.py  test_base_contracts.py  test_constraints.py  test_dashboard_smoke.py  test_etl.py  test_extraction_resume.py  test_features.py  test_final_project_static.py  test_language_guardrails.py  test_manifest_state.py  test_pipeline_smoke.py  test_process_master_integration.py  test_reproducibility_closure.py  test_scoring.py  test_services_and_dashboard.py  test_sql_schema.py  test_triggers.py
validation/: README.md  demo_cases_sample.csv  manual_review_sample.csv
(+93 files in other folders)
